# Umbrella

./: build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/proguard/: unused.txt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: umbrella.json
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  tencentloc.cpp  umbrella1.cpp  umbrella2.cpp
app/src/main/cpp/include/: HttpReq.h  Memory.h  Verification.h  bsphp.h  certificate.h  httpUtils.h  injectMemory.h  jniutils.h  loginUtils.h  print.h  rc4.h  urlencoding.h
app/src/main/cpp/include/curl/: curl.h  curlver.h  mprintf.h  multi.h  stdcheaders.h  system.h  typecheck-gcc.h  urlapi.h
app/src/main/cpp/include/openssl/: bio.h  crypto.h  des.h  lhash.h  opensslconf.h  safestack.h
app/src/main/java/com/agoda/umbrella/: StubApp.java
app/src/main/java/com/agoda/umbrella/activity/: BaseActivity.kt  CoreActivity.kt  LoginActivity.kt  SplashActivity.kt
app/src/main/java/com/agoda/umbrella/data/: DataParser.java  DataProvider.java
app/src/main/java/com/agoda/umbrella/fragment/: CoreFragment.kt  HelpFragment.kt  SettingFragment.kt
app/src/main/java/com/agoda/umbrella/helper/: ConfigHelper.kt  DrawHelper.java  EydataHelper.java  IconHelper.java
app/src/main/java/com/agoda/umbrella/service/: SurfaceService.java
app/src/main/java/com/agoda/umbrella/utils/: AppUtils.java  Crc32Editor.java  CustomCountDownTimer.java  FileUtils.java  HttpUtils.java  RandomUtils.java  ScreenUtils.kt  ShareUtils.java  ShellUtils.java  Tools.java
app/src/main/java/com/agoda/umbrella/view/: DrawView.java  ISeekBarListener.java
app/src/main/res/drawable/: banner.xml  circlr_style.xml  edtext_style.xml  ic_fun.xml  logo.xml  round_rect_blue.xml  round_rect_red.xml  switch_off_thumb.xml  switch_off_track.xml  switch_on_track.xml
app/src/main/res/layout/: activity_core.xml  activity_login.xml  activity_splash.xml  float_menu.xml  fragment_core.xml  fragment_help.xml  fragment_setting.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/raw/: part1  part2  part4  umbrella
app/src/main/res/values/: colors.xml  help.xml  themes.xml
app/src/main/res/xml/: provider_paths.xml
